--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,3 +26,6 @@ jobs:
         run: |
           # запуск проверки проекта по flake8
           python -m flake8
+          # перейти в папку, содержащую manage.py
+          cd infra_project/
+          python manage.py test
